--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
-    <header class="header">
+    <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
+            <!-- Unordered list element-->
             <ul>
+                <!-- List item element -->
                 <li>
+                    <!-- List Anchor element -->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -23,10 +26,13 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </div>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+    </div>
+
+    <!-- insert this img section -->
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -48,6 +54,7 @@
             </p>
         </div>
     </div>
+    <!-- benefits section -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +78,7 @@
             </p>
         </div>
     </div>
+    <!-- footer -->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
